<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

   	<Button android:id="@+id/btn1"
   	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content"
   	    android:text="@string/text_btn1"/>
   	<Button android:id="@+id/btn2"
   	    android:layout_height="wrap_content"
   	    android:layout_width="match_parent"
   	    android:text="@string/text_btn2"/>
   	<Button android:id="@+id/btn3"
   	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content"
   	    android:text="@string/text_btn3"/>
   	<Button android:id="@+id/btn4"
   	    android:layout_height="wrap_content"
   	    android:layout_width="match_parent"
   	    android:text="@string/text_btn4"/>

</LinearLayout>
